@@ -18,7 +18,9 @@
     <properties>
 
         <!-- Generic properties -->
-        <java.version>10</java.version>
+        <java.version>11</java.version>
+        <maven.compiler.source>${java.version}</maven.compiler.source>
+        <maven.compiler.target>${java.version}</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -55,7 +57,7 @@
         <dependency>
             <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
-            <version>3.22.0-GA</version>
+            <version>3.23.1-GA</version>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -94,6 +96,17 @@
             <groupId>org.ehcache</groupId>
             <artifactId>ehcache</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.javassist</groupId>
+            <artifactId>javassist</artifactId>
+            <version>3.23.1-GA</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>2.20.0</version>
+            <scope>test</scope>
+        </dependency>
 
         <!-- webjars -->
        <!-- <dependency>
@@ -130,11 +143,18 @@
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.7.0</version>
+                    <version>3.8.0</version>
                     <configuration>
                         <source>${java.version}</source>
                         <target>${java.version}</target>
                     </configuration>
+                    <dependencies>
+                        <dependency>
+                            <groupId>org.ow2.asm</groupId>
+                            <artifactId>asm</artifactId>
+                            <version>6.2</version>
+                        </dependency>
+                    </dependencies>
                 </plugin>
             </plugins>
         </pluginManagement>
@@ -142,26 +162,23 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.7.0</version>
-                <configuration>
-                    <compilerArgs>
-                        <arg>--add-modules</arg>
-                        <arg>java.xml.bind</arg>
-                    </compilerArgs>
-                </configuration>
+                <version>3.8.0</version>
             </plugin>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.21.0</version>
-                <!--<version>2.20.1</version>-->
-                <configuration>
-                    <argLine>--add-modules java.xml.bind</argLine>
-                </configuration>
+                <version>2.22.1</version>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.ow2.asm</groupId>
+                        <artifactId>asm</artifactId>
+                        <version>6.2</version>
+                    </dependency>
+                </dependencies>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
-                <version>3.0.2</version>
+                <version>3.1.0</version>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -170,43 +187,8 @@
                     <jvmArguments>--add-modules java.xml.bind</jvmArguments>
                     <mainClass>org.springframework.samples.petclinic.PetClinicApplication</mainClass>
                 </configuration>
-               <!-- <executions>
-                    <execution>
-                        &lt;!&ndash; Spring Boot Actuator displays build-related information
-                          if a META-INF/build-info.properties file is present &ndash;&gt;
-                        <goals>
-                            <goal>build-info</goal>
-                        </goals>
-                        <configuration>
-                            <additionalProperties>
-                                <jvmArguments>&#45;&#45;add-modules</jvmArguments>
-                                <jvmArguments>java.xml.bind</jvmArguments>
-                                <encoding.source>${project.build.sourceEncoding}</encoding.source>
-                                <encoding.reporting>${project.reporting.outputEncoding}</encoding.reporting>
-                                <java.source>${maven.compiler.source}</java.source>
-                                <java.target>${maven.compiler.target}</java.target>
-                                <mainClass>org.springframework.samples.petclinic.PetClinicApplication</mainClass>
-                            </additionalProperties>
-                        </configuration>
-                    </execution>
-                </executions>-->
             </plugin>
-            <!-- <plugin>
-                 <groupId>org.codehaus.mojo</groupId>
-                 <artifactId>cobertura-maven-plugin</artifactId>
-                 <version>${cobertura.version}</version>
-                 <configuration>
-                     <check/>
-                 </configuration>
-                 <executions>
-                     <execution>
-                         <goals>
-                             <goal>clean</goal>
-                             <goal>check</goal>
-                         </goals>
-                     </execution>
-                 </executions>
-             </plugin>-->
+
 
             <!-- Spring Boot Actuator displays build-related information if a git.properties
               file is present at the classpath -->
@@ -234,6 +216,7 @@
                 <groupId>ro.isdc.wro4j</groupId>
                 <artifactId>wro4j-maven-plugin</artifactId>
                 <version>${wro4j.version}</version>
+
                 <executions>
                     <execution>
                         <phase>generate-resources</phase>
@@ -256,26 +239,15 @@
                         <artifactId>bootstrap</artifactId>
                         <version>${webjars-bootstrap.version}</version>
                     </dependency>
+                    <dependency>
+                        <groupId>org.mockito</groupId>
+                        <artifactId>mockito-core</artifactId>
+                        <version>2.20.0</version>
+                    </dependency>
                 </dependencies>
             </plugin>-->
         </plugins>
     </build>
-    <!--<reporting>-->
-    <!--<plugins>-->
-    <!--&lt;!&ndash; integrate maven-cobertura-plugin to project site &ndash;&gt;-->
-    <!--<plugin>-->
-    <!--<groupId>org.codehaus.mojo</groupId>-->
-    <!--<artifactId>cobertura-maven-plugin</artifactId>-->
-    <!--<version>${cobertura.version}</version>-->
-    <!--<configuration>-->
-    <!--<formats>-->
-    <!--<format>html</format>-->
-    <!--</formats>-->
-    <!--<check/>-->
-    <!--</configuration>-->
-    <!--</plugin>-->
-    <!--</plugins>-->
-    <!--</reporting>-->
 
     <!-- Apache 2 license -->
     <licenses>
@@ -286,6 +258,11 @@
     </licenses>
 
     <repositories>
+        <repository>
+            <id>jvnet-nexus-staging</id>
+            <url>http://maven.java.net/content/repositories/staging/</url>
+            <layout>default</layout>
+        </repository>
         <repository>
             <id>spring-snapshots</id>
             <name>Spring Snapshots</name>
